Finish static file serving; Improve plugin API routes; Cleanup and format spec [WIP]
